# gorest.co.in

./: .gitignore  configuration.py  dd  pyproject.toml  pytest.ini
src/base_class/: builder.py  response.py
src/enums/: global_emuns.py  user_enums.py
src/generator/: player.py  player_locale.py
src/pydantic_schemas/: post.py  todo.py  user.py
tests/: conftest.py  test_requests.py
tests/some_tests/: test_duilber.py
tests/users/: conftest.py  test_requests.py
