[tool.poetry]
name = "gorest-co-in"
version = "0.1.0"
description = ""
authors = ["fuffes <shamrey02@mail.ru>"]
readme = "README.md"
packages = [{include = "gorest"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
jsonschema = "^4.17.3"
requests = "^2.28.2"
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
